syntax = "proto3";

package grpcservice;

//import "appnode.proto";
//import "categorysplitfile.proto";


service appNodeManager {
  rpc AppNodeRegister(AppNodeRegisterRequest) returns(AppNodeRegisterResponse) {}
  rpc AppNodeHeartBeat(HeartBeatRequest) returns(HeartBeatResponse) {}
}

message AppNodeRegisterRequest {
  string hostName = 1;
  string localAddress = 2;
  string nodeId = 3;
}

message AppNodeRegisterResponse {
  string nodeId = 1;
  string errorMessage = 2;
}

message HeartBeatRequest {
  string nodeId = 1;
  string status = 2;
}

message HeartBeatResponse {
  string nodeId = 1;
  string lastHeartBeat = 2;
  string errorMessage = 3;
}


service dataManager {
 rpc CategorySplitCollect(CategorySplitRequest) returns(CategorySplitResponse){}
}

message CategorySplitRequest {
 string relativeStoringFile = 1;
 uint64 size = 2;
 bytes data = 3;
}

message CategorySplitResponse {
 uint64 sizeWritten = 1;
 string errorMessage =2;
}



